# general_c_cpp

./: GenBuildNumberStr.h  README.md  c_demo.c  debug.h  ftp_lib.c  getendian.h  main.c  mountfolder.bat  palindrome.h  print_square.h
NetLib/: NetLib.h
NetLib/windows/: NetLib.sln
Server/: Server.pro  hexdump.hpp  mainwindow.cpp  mainwindow.h  server.cpp  server.h  textoutput.h
backtrace/: backtrace_inject.py
backtrace/demo/: Makefile  backtrace.c  backtrace.h
bitmap/: BitmapV4.h  Makefile  main.c
build-features/: CMakeLists.txt  Makefile  main.cpp
build_number/: BuildNumberStr.h  BuildVerStrReadFile.h  BuildVerStrTimestamp.h  CMakeLists.txt  GlobalRevNumber.txt  Makefile  buildtimestamp.h  main.cpp  updateGlobalRevNumber.sh
c_parser/: c_parser.py  testcases.c
demo/: .cproject  demo.txt  file.cpp  main.cpp
guess_func/: bruteforce_data.py  calculation_data.csv  calculation_data.pkl  guess_func.sln  train_blackbox_model.py  use_trained_model.py
guess_func/guess_func/: dllmain.cpp  guess_func.vcxproj
linker/: demo.elf  main.c  makefile  script.ld  sw_header.c  sw_header.h
list/: Makefile  genlist.h  main.c
network_examples/: multicast.c
operating-system/: Makefile  kernel.cpp  linker.ld  loader.s
register-modules/register-modules/: english_people.c  french_people.c  main.c  people.h  (+5 more)
threads/: 1_threads_not_dying.main.cpp  2_how_to_identify_thread.main.cpp  3_now_we_can_kill_threads.cpp
tmp/: Jenkinsfile.example  caller.bat  mountFolder.groovy  mountfolder.bat  unmount.txt
vscode/: main.c
win-net/: list_interfaces.c  udp_recv.c
(+22 files in other folders)
